scrolling and spacing issues on main page

--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -133,7 +133,7 @@
     flex-direction: column;
     border-radius: 5px;
     animation: fade-in 1s ease;    
-    animation-iteration-count: initial;
+    animation-iteration-coupaddingnt: initial;
     position: relative;
     .user-name{
         font-size: 11pt;
@@ -157,6 +157,7 @@
     width: 100%;
     min-height: 40px;
     margin-bottom: 20px;
+    margin-top: 20px;
     display: flex;
     box-shadow: 0px 1px 4px rgba(146,146,146,.25); 
     div{
